--- a/AnnuaireEntrepriseCESI/MainWindow.xaml
+++ b/AnnuaireEntrepriseCESI/MainWindow.xaml
@@ -5,8 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnnuaireEntrepriseCESI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Annuaire Entreprise" MinHeight="500" MinWidth="910" Height="500" Width="910" >
     <Grid>
+        <!-- Première ligne : ComboBox et TextBox -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
 
+        <Grid  VerticalAlignment="Center" HorizontalAlignment="Left"  >
+            <!-- TextBox pour la saisie de données -->
+            <Label Name="_Recherche" Content="Recherche :" VerticalAlignment="Bottom" Target="{Binding ElementName=RechercheTextBox}" Padding="0, 0" Width="100" Margin="11,0,779,32"/>
+            <TextBox Name="RechercheTextBox" Width="200" Height="22" Margin="11,28,679,10"/>
+
+            <!-- ComboBox 1 -->
+            <Label Content="Service :" VerticalAlignment="Bottom" Width="100" Padding="0, 0" Margin="217,0,573,32" />
+            <ComboBox Name="serviceComboBox" Width="150" Height="22" Margin="216,28,524,10">
+                <!-- Ajoutez ici les éléments de votre ComboBox 1 -->
+            </ComboBox>
+
+            <!-- ComboBox 2 -->
+            <Label Content="Site :" VerticalAlignment="Top" Width="100"  Padding="0, 0" Margin="373,12,417,0"/>
+            <ComboBox Name="SiteComboBox" Width="150" Height="22" Margin="373,28,367,10">
+                <!-- Ajoutez ici les éléments de votre ComboBox 2 -->
+            </ComboBox>
+            <Button Content="Gestion utilisateur" HorizontalAlignment="Left" Margin="542,0,0,0" VerticalAlignment="Top" Width="109"/>
+            <Button Content="Gestion service" HorizontalAlignment="Left" Margin="542,0,0,0" VerticalAlignment="Center" Width="109"/>
+            <Button Content="Gestion site" HorizontalAlignment="Left" Margin="542,39,0,0" VerticalAlignment="Top" Width="109"/>
+
+            <Button Content="Quitter" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="70" Margin="810,30,0,0"/>
+        </Grid>
+
+        <!-- Deuxième ligne : DataGrid -->
+        <DataGrid Name="dataGrid" Grid.Row="2" Margin="10" AutoGenerateColumns="False" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Nom" Binding="{Binding Surname}" />
+                <DataGridTextColumn Header="Prénom" Binding="{Binding Name}" />
+                <DataGridTextColumn Header="Email" Binding="{Binding Mail}" />
+                <DataGridTextColumn Header="Téléphone fixe" Binding="{Binding PhoneNumber}" />
+                <DataGridTextColumn Header="Téléphone mobile" Binding="{Binding MobilePhone}" />
+                <DataGridTextColumn Header="Service" Binding="{Binding Service}" />
+                <DataGridTextColumn Header="Site" Binding="{Binding Site}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
+
 </Window>
