--- a/AnnuaireEntrepriseCESI/MainWindow.xaml
+++ b/AnnuaireEntrepriseCESI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnnuaireEntrepriseCESI"
         mc:Ignorable="d"
-        Title="Annuaire Entreprise" MinHeight="500" MinWidth="910" MaxHeight="500" MaxWidth="910" WindowState="Maximized" KeyDown="Admin_KeyDown">
+        Title="Annuaire Entreprise" MinHeight="500" MinWidth="910" MaxHeight="500" MaxWidth="910" KeyDown="Admin_KeyDown">
     <Grid>
         <!-- Première ligne : ComboBox et TextBox -->
         <Grid.RowDefinitions>
@@ -29,9 +29,9 @@
             <ComboBox Name="SiteComboBox" Width="150" Height="22" Margin="373,28,367,10">
                 <!-- Ajoutez ici les éléments de votre ComboBox 2 -->
             </ComboBox>
-            <Button Name="GestionUser" Content="Gestion utilisateur" HorizontalAlignment="Left" Margin="542,0,0,0" VerticalAlignment="Top" Width="109" Visibility="Hidden"/>
-            <Button Name="GestionService" Content="Gestion service" HorizontalAlignment="Left" Margin="542,0,0,0" VerticalAlignment="Center" Width="109" Visibility="Hidden"/>
-            <Button Name="GestionSite" Content="Gestion site" HorizontalAlignment="Left" Margin="542,39,0,0" VerticalAlignment="Top" Width="109" Visibility="Hidden"/>
+            <Button Name="BtnGestionUser" Click="BtnGestionUserClick" Content="Gestion utilisateur" HorizontalAlignment="Left" Margin="542,0,0,0" VerticalAlignment="Top" Width="109" Visibility="Hidden"/>
+            <Button Name="BtnGestionService" Click="BtnGestionServiceClick" Content="Gestion service" HorizontalAlignment="Left" Margin="542,0,0,0" VerticalAlignment="Center" Width="109" Visibility="Hidden"/>
+            <Button Name="BtnGestionSite" Click="BtnGestionSiteClick" Content="Gestion site" HorizontalAlignment="Left" Margin="542,39,0,0" VerticalAlignment="Top" Width="109" Visibility="Hidden"/>
 
             <Button Content="Quitter" Click="BtnQuitClick" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="70" Margin="810,30,0,0"/>
         </Grid>
