--- a/AnnuaireEntrepriseCESI/Pages/GestionService/GestionServiceWindow.xaml
+++ b/AnnuaireEntrepriseCESI/Pages/GestionService/GestionServiceWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnnuaireEntrepriseCESI.Pages.GestionService"
         mc:Ignorable="d"
-        Title="GestionService" Height="450" Width="800">
+        Title="GestionService" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Button Content="Retour" HorizontalAlignment="Left" Margin="735,52,0,0" VerticalAlignment="Top"/>
-        <Button Content="Ajouter un service" HorizontalAlignment="Left" Margin="400,42,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Margin="10,42,0,0" Text="Service" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Retour" Click="BtnBackClick" HorizontalAlignment="Left" Margin="735,52,0,0" VerticalAlignment="Top"/>
+        <Button Content="Ajouter un service" Click="BtnAddClick" HorizontalAlignment="Left" Margin="400,42,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="Recherche :" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.469,0.614" Height="26" Width="120"/>
-        <DataGrid Name="DataService" AutoGenerateColumns="False" Margin="10,77,10,10">
+        <DataGrid Name="DataService" IsReadOnly="True" AutoGenerateColumns="False" Margin="10,77,10,10">
             <DataGrid.Columns>
                 <DataGridTextColumn Width="5*" Header="ID" Binding="{Binding Id}" />
                 <DataGridTextColumn Width="5*" Header="Nom" Binding="{Binding Name}" />
@@ -19,8 +19,8 @@
                 <DataGridTemplateColumn Header="Modifier"  Width="1*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Name="ModifyService" FontSize="14" >
-                                <Image Width="20" Height="20" Source="/Images/modifier.png" />
+                            <Button Name="ModifyService" Click="BtnUpdateClick" FontSize="14" >
+                                <Image Width="20" Height="20" Source="C:\Users\camil\source\repos\Perso-WPF\AnnuaireEntrepriseCESI\Images\modifier.png" />
                             </Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -29,7 +29,7 @@
                 <DataGridTemplateColumn Header="Supprimer"  Width="1*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Name="DeleteService" FontSize="14" >
+                            <Button Name="DeleteService" Click="BtnDeleteClick" FontSize="14" >
                                 <Image Name="imgtest" Width="20" Height="20" Source="C:\Users\camil\source\repos\Perso-WPF\AnnuaireEntrepriseCESI\Images\supprimer.png" />
                             </Button>
                         </DataTemplate>
