--- a/AnnuaireEntrepriseCESI/Pages/Login.xaml
+++ b/AnnuaireEntrepriseCESI/Pages/Login.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnnuaireEntrepriseCESI.Pages"
         mc:Ignorable="d"
-        Title="Login" Height="200" Width="300" MaxHeight="200" MaxWidth="300">
+        Title="Login" Height="200" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <TextBlock Text="Entrez votre mot de passe :" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0"/>
-        <PasswordBox Name="PassWordTextBox" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0" Width="144"/>
+        <PasswordBox Name="PassWordTextBox" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0" Width="144" />
         <Button Content="Connexion" Name="ConnexionButton" Click="BtnLoginClick" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,80,0,0"/>
         <Button Content="Retour" Name="RetourBoutton" Click="BtnCloseClick" HorizontalAlignment="Center" Margin="0,105,0,0" VerticalAlignment="Top"/>
     </Grid>
