--- a/AnnuaireEntrepriseCESI/Pages/GestionUser/AddUserWindow.xaml
+++ b/AnnuaireEntrepriseCESI/Pages/GestionUser/AddUserWindow.xaml
@@ -5,8 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnnuaireEntrepriseCESI.Pages.GestionUser"
         mc:Ignorable="d"
-        Title="AddUserWindow" Height="450" Width="800">
+        Title="AddUserWindow" Height="450" Width="560" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Label Content="Ajout" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" Margin="0,2,0,0" VerticalAlignment="Top" Height="23" Width="230"/>
+
+        <Label Content="Prénom de l'utilisateur :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,20,0,0"/>
+        <TextBox Name="NameUser" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="20,45,0,0"/>
+
+        <Label Content="Nom de l'utilisateur :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="338,20,0,0"/>
+        <TextBox Name="SurnameUser" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="338,45,0,0"/>
+
+        <Label Content="Mail de l'utilisateur :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,80,0,0"/>
+        <TextBox Name="MailUser" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="20,105,0,0"/>
+
+        <Label Content="Téléphone fixe de l'utilisateur :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="339,80,0,0"/>
+        <TextBox Name="PhoneNumber" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="338,105,0,0"/>
+
+        <Label Content="Téléphone mobile de l'utilisateur :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,140,0,0"/>
+        <TextBox Name="MobilePhone" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="20,165,0,0"/>
+
+        <Label Content="Service de l'utilisateur :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="338,140,0,0"/>
+        <ComboBox Name="ServiceUser" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="338,165,0,0"/>
+
+        <Label Content="Site de l'utilisateur :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,200,0,0"/>
+        <ComboBox Name="SiteUser" DataContext="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="20,226,0,0"/>
+
+        <Button Content="Valider" Click="BtnValiderClick" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Margin="185,367,0,0" />
+        <Button Content="Retour" Click="BtnRetourClick" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Margin="315,367,0,0" />
+
     </Grid>
 </Window>
