--- a/AnnuaireEntrepriseCESI/Pages/GestionUser/UpdateUserWindow.xaml
+++ b/AnnuaireEntrepriseCESI/Pages/GestionUser/UpdateUserWindow.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnnuaireEntrepriseCESI.Pages.GestionUser"
         mc:Ignorable="d"
-        Title="UpdateUserWindow" Height="450" Width="600
-        " ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="UpdateUserWindow" Height="450" Width="560" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Label Content="Modification" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" Margin="0,2,0,0" VerticalAlignment="Top" Height="23" Width="230"/>
 
