--- a/AnnuaireEntrepriseCESI/MainWindow.xaml
+++ b/AnnuaireEntrepriseCESI/MainWindow.xaml
@@ -19,18 +19,10 @@
             <TextBox Name="RechercheTextBox" Width="200" Height="22" Margin="11,28,679,10"/>
 
             <!-- ComboBox 1 -->
-            <Label Content="Service :" VerticalAlignment="Bottom" Width="100" Padding="0, 0" Margin="217,0,573,32" />
-            <ComboBox Name="serviceComboBox" SelectionChanged="SearchServiceChanged" Width="150" Height="22" Margin="216,28,524,10">
-                <!-- Ajoutez ici les éléments de votre ComboBox 1 -->
-            </ComboBox>
 
             <!-- ComboBox 2 -->
-            <Label Content="Site :" VerticalAlignment="Top" Width="100"  Padding="0, 0" Margin="373,12,417,0"/>
-            <ComboBox Name="SiteComboBox" SelectionChanged="SearchSiteChanged" Width="150" Height="22" Margin="373,28,367,10">
-                <!-- Ajoutez ici les éléments de votre ComboBox 2 -->
-            </ComboBox>
-            <Button Content="Recherche" Click="SearchBarClicked" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="70" Margin="0,0,288,12"/>
-            
+            <Button Content="Recherche" Click="SearchBarClicked" HorizontalAlignment="Left" VerticalAlignment="Top" Width="70" Margin="220,28,0,0"/>
+
             <Button Name="BtnGestionUser" Click="BtnGestionUserClick" Content="Gestion utilisateur" HorizontalAlignment="Left" Margin="630,0,0,0" VerticalAlignment="Top" Width="109" Visibility="Hidden"/>
             <Button Name="BtnGestionService" Click="BtnGestionServiceClick" Content="Gestion service" HorizontalAlignment="Left" Margin="630,0,0,0" VerticalAlignment="Center" Width="109" Visibility="Hidden" />
             <Button Name="BtnGestionSite" Click="BtnGestionSiteClick" Content="Gestion site" HorizontalAlignment="Left" Margin="630,39,0,0" VerticalAlignment="Top" Width="109" Visibility="Hidden"/>
